# dart-ffi

./: README.md  pubspec.yaml
utils/lib/: .gitignore  CMakeLists.txt  math.c  math.def  math.h  math_test
